# ChangeLog for net-mail/qmail-scanner
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/qmail-scanner/ChangeLog,v 1.12 2004/01/29 05:26:42 robbat2 Exp $

*qmail-scanner-1.20 (28 Jan 2004)

  28 Jan 2004; Robin H. Johnson <robbat2@gentoo.org>
  qmail-scanner-1.20.ebuild, files/qmail-scanner-queue.pl.patch,
  files/qmailscanner.cronjob, files/qmailscanner.logrotate:
  Version bump, bugs #38065, #39670. This software seems very touchy at the
  moment, it doesn't fail gracefully and so qmail can loose mail if anything is
  wrong!

  26 Dec 2003; Jason Wever <weeve@gentoo.org> qmail-scanner-1.16.ebuild:
  Masked on sparc as f-prot does not work on sparc.

*qmail-scanner-1.16-r2 (28 Nov 2003)

  28 Nov 2003; Robin H. Johnson <robbat2@gentoo.org>
  qmail-scanner-1.16-r2.ebuild:
  cleanup ebuild, fix bug #33211, and update postinst docs

*qmail-scanner-1.16-r1 (19 Apr 2003)

  19 Apr 2003; Preston A. Elder <prez@gentoo.org> qmail-scanner-1.16-r1.ebuild,
  Made dependant on virtual/virus not f-prot specifically.

*qmail-scanner-1.16 (15 Feb 2003)

  15 Feb 2003; Nick Hadaway <raker@gentoo.org> qmail-scanner-1.16.ebuild,
  files/digest-qmail-scanner-1.16 :
  Version bump.  Adds keepdir stuff to /var directories.

*qmail-scanner-1.15 (21 Jan 2003)

  21 Jan 2003; Nick Hadaway <raker@gentoo.org> qmail-scanner-1.15.ebulid, 
  files/digest-qmail-scanner-1.15 :
  Version bump.  This one should be compatible with perl-5.8

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*qmail-scanner-1.14 (07 Oct 2002)

  17 Oct 2002; Nick Hadaway <raker@gentoo.org>
  qmail-scanner-1.14.ebuild, files/digest-qmail-scanner-1.14 :
  Version bump.  Fixes some bugs with alert reporting and for usage with
  SpamAssassin.

*qmail-scanner-1.13 (15 Aug 2002)

  15 Aug 2002; Nick Hadaway <raker@gentoo.org>
  qmail-scanner-1.13.ebuild, files/digest-qmail-scanner-1.13 :
  Version bump.
