@@ -1,5 +1,9 @@
-MD5 81c858c80855f700aa1c3997aac09c0c qmail-scanner-1.16.ebuild 2571
-MD5 afe37a64c42accc2f37231d0c3679b7f qmail-scanner-1.16-r1.ebuild 2581
+MD5 31039573e649e44e1f6ac4a94e5465cc qmail-scanner-1.16.ebuild 2570
+MD5 1d2a4d79ed5478270dc51de57040ac17 qmail-scanner-1.16-r1.ebuild 2580
+MD5 3176f6bb3f44fa3a0613ddf138093aa0 qmail-scanner-1.16-r2.ebuild 1994
+MD5 f4d555294a9f5f0752959c7d74a12d5c ChangeLog 2350
+MD5 5721b86fd871bdfab77231abc6e02f68 metadata.xml 161
+MD5 83a2e28acff84729b5f6b3f1ab7452c0 qmail-scanner-1.20.ebuild 4400
 MD5 6f6fc9e3db3985ba4ae5a6203d2d6abf files/qmailscanner.cronjob 50
 MD5 21cbccfc2015bf74d509a5b329ef4b30 files/digest-qmail-scanner-1.16 67
 MD5 797efb400e5d84070bd2237518cff4ba files/digest-qmail-scanner-1.20 67
@@ -7,7 +11,3 @@ MD5 055c5ac64c689a669b8ccd6bc5f6553d files/qmailscanner.logrotate 147
 MD5 1d80eca1d4792a4073f51eb59f02960b files/qmail-scanner-queue.pl.patch 240
 MD5 21cbccfc2015bf74d509a5b329ef4b30 files/digest-qmail-scanner-1.16-r1 67
 MD5 21cbccfc2015bf74d509a5b329ef4b30 files/digest-qmail-scanner-1.16-r2 67
-MD5 1675e9e9b342a51a12b26fc824366b4f qmail-scanner-1.16-r2.ebuild 1933
-MD5 52d4de578a45bcc926508348306f732d ChangeLog 2187
-MD5 5721b86fd871bdfab77231abc6e02f68 metadata.xml 161
-MD5 645a47656a14b9943930e8b5ee9b12b1 qmail-scanner-1.20.ebuild 4338
